[gd_scene load_steps=44 format=3 uid="uid://co7bljkxxsl6q"]

[ext_resource type="Texture2D" uid="uid://dj3tpndaen7a5" path="res://assets/Free Character Sprites 2 - Fantasy Dreamland/24x24/Char_007_Idle.png" id="1_4flbx"]
[ext_resource type="Script" uid="uid://t3txbtv0h6s3" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://bs7xem4r27kfd" path="res://assets/Free Dungeon - Fantasy Dreamland/16x16/FD_Dungeon_Free.png" id="2_dqkch"]
[ext_resource type="Texture2D" uid="uid://dms0ht6o43vw6" path="res://assets/Free Character Sprites 2 - Fantasy Dreamland/24x24/Char_007.png" id="3_qhqgy"]
[ext_resource type="Script" uid="uid://dmg2p234qs3yj" path="res://scripts/tp.gd" id="4_qlg0r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_onrkg"]
size = Vector2(6, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3pqv"]
atlas = ExtResource("1_4flbx")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqtel"]
atlas = ExtResource("1_4flbx")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqy"]
atlas = ExtResource("1_4flbx")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hs0m"]
atlas = ExtResource("1_4flbx")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r5pv"]
atlas = ExtResource("1_4flbx")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_60mlk"]
atlas = ExtResource("1_4flbx")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4ail"]
atlas = ExtResource("1_4flbx")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_a38lo"]
atlas = ExtResource("1_4flbx")
region = Rect2(72, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ni07"]
atlas = ExtResource("1_4flbx")
region = Rect2(0, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_l71n6"]
atlas = ExtResource("1_4flbx")
region = Rect2(24, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke2ow"]
atlas = ExtResource("1_4flbx")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujl30"]
atlas = ExtResource("1_4flbx")
region = Rect2(72, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_31cv2"]
atlas = ExtResource("1_4flbx")
region = Rect2(0, 72, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf23h"]
atlas = ExtResource("1_4flbx")
region = Rect2(24, 72, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dt7fs"]
atlas = ExtResource("1_4flbx")
region = Rect2(48, 72, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqfne"]
atlas = ExtResource("1_4flbx")
region = Rect2(72, 72, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("3_qhqgy")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("3_qhqgy")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("3_qhqgy")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("3_qhqgy")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqkch"]
atlas = ExtResource("3_qhqgy")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("3_qhqgy")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("3_qhqgy")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("3_qhqgy")
region = Rect2(72, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhqgy"]
atlas = ExtResource("3_qhqgy")
region = Rect2(0, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("3_qhqgy")
region = Rect2(24, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("3_qhqgy")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("3_qhqgy")
region = Rect2(72, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("3_qhqgy")
region = Rect2(0, 72, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ls1"]
atlas = ExtResource("3_qhqgy")
region = Rect2(24, 72, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfm1y"]
atlas = ExtResource("3_qhqgy")
region = Rect2(48, 72, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fulsm"]
atlas = ExtResource("3_qhqgy")
region = Rect2(72, 72, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_1jxqw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3pqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hs0m")
}],
"loop": true,
"name": &"idle ui_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r5pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60mlk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4ail")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a38lo")
}],
"loop": true,
"name": &"idle ui_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ni07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l71n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke2ow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujl30")
}],
"loop": true,
"name": &"idle ui_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_31cv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf23h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt7fs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqfne")
}],
"loop": true,
"name": &"idle ui_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}],
"loop": true,
"name": &"ui_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqkch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlg0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}],
"loop": true,
"name": &"ui_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhqgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}],
"loop": true,
"name": &"ui_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfm1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulsm")
}],
"loop": true,
"name": &"ui_up",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_wnwbv"]
atlas = ExtResource("2_dqkch")
region = Rect2(416, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl8cc"]
atlas = ExtResource("2_dqkch")
region = Rect2(448, 96, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_487ah"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnwbv")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnwbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl8cc")
}],
"loop": true,
"name": &"hover",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dqkch"]
size = Vector2(10, 10)

[node name="CharacterBody2D" type="Area2D" groups=["player"]]
y_sort_enabled = true
collision_layer = 2
script = ExtResource("1_g2els")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_onrkg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -5)
sprite_frames = SubResource("SpriteFrames_1jxqw")
animation = &"idle ui_down"
autoplay = "idle ui_down"

[node name="RayCast2d" type="RayCast2D" parent="."]
collision_mask = 3

[node name="tp_right" type="Area2D" parent="."]
visible = false
z_index = -1
position = Vector2(32, 3)
script = ExtResource("4_qlg0r")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="tp_right"]
sprite_frames = SubResource("SpriteFrames_487ah")

[node name="CollisionShape2D" type="CollisionShape2D" parent="tp_right"]
shape = SubResource("RectangleShape2D_dqkch")

[node name="tp_left" type="Area2D" parent="."]
visible = false
z_index = -1
position = Vector2(-32, 3)
script = ExtResource("4_qlg0r")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="tp_left"]
sprite_frames = SubResource("SpriteFrames_487ah")

[node name="CollisionShape2D" type="CollisionShape2D" parent="tp_left"]
shape = SubResource("RectangleShape2D_dqkch")

[node name="tp_up" type="Area2D" parent="."]
visible = false
z_index = -1
position = Vector2(0, -29)
script = ExtResource("4_qlg0r")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="tp_up"]
sprite_frames = SubResource("SpriteFrames_487ah")

[node name="CollisionShape2D" type="CollisionShape2D" parent="tp_up"]
shape = SubResource("RectangleShape2D_dqkch")

[node name="tp_down" type="Area2D" parent="."]
visible = false
z_index = -1
position = Vector2(0, 35)
script = ExtResource("4_qlg0r")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="tp_down"]
sprite_frames = SubResource("SpriteFrames_487ah")

[node name="CollisionShape2D" type="CollisionShape2D" parent="tp_down"]
shape = SubResource("RectangleShape2D_dqkch")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="input_event" from="tp_right" to="tp_right" method="_on_input_event"]
[connection signal="mouse_entered" from="tp_right" to="tp_right" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="tp_right" to="tp_right" method="_on_mouse_exited"]
[connection signal="input_event" from="tp_left" to="tp_left" method="_on_input_event"]
[connection signal="mouse_entered" from="tp_left" to="tp_left" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="tp_left" to="tp_left" method="_on_mouse_exited"]
[connection signal="input_event" from="tp_up" to="tp_up" method="_on_input_event"]
[connection signal="mouse_entered" from="tp_up" to="tp_up" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="tp_up" to="tp_up" method="_on_mouse_exited"]
[connection signal="input_event" from="tp_down" to="tp_down" method="_on_input_event"]
[connection signal="mouse_entered" from="tp_down" to="tp_down" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="tp_down" to="tp_down" method="_on_mouse_exited"]
